# csm

./: .gitignore  CMakeLists.txt  CSM_MANUAL.html  Doxyfile  INSTALL.txt  README.md  TODO.txt  csm_manual.html  index.html  index.md  install_quickstart.sh  local-Melania.cmake  local-jamaika.cmake  local-linuxserv-icc.cmake  local-linuxserv.cmake  local-lisablack.cmake  local-sorchetta.cmake  package.xml
c/: icp.h  (+5 more)
docs/example-linking-cmake/: CMakeLists.txt
gpc/c/: CMakeLists.txt  compile_example.sh  gpc.c  gpc.h  gpc_test.c  gpc_utils.c
icp/: CMakeLists.txt  clustering.c  gpm.c  gsl_stack.c  gsl_stack.h  icp.c  icp.h  icp_correspondences_dumb.c  icp_correspondences_tricks.c  icp_covariance.c  icp_loop.c  icp_outliers.c  journal.c  journal.h  laser_data.c  laser_data.h  math_utils.c  math_utils.h  orientation.c  sm.h
icp/lib/gpc/: Makefile.standalone  README.txt  gpc_utils.h
sm/: .gitignore  AUTHORS  CMakeLists.txt  FindCairo.cmake  FindGSL.cmake  clustering.c  easy_gsl.c  easy_gsl.h  easy_gsl_macros.h  easy_gsl_test.c  gpm.c  header_test.c.in  icp.c  icp_correspondences_tricks.c  icp_covariance.c  icp_loop.c  icp_outliers.c  journal.c  laser_data.c  laser_data.h  math_utils.c  math_utils.h  orientation.c  sm.h  test_math_utils.c
sm/apps/: carmen2json.c  carmen2pdf.c  json2carmen.c  json2matlab.c  json_decimate.c  json_extract.c  json_extract_field.c  json_pipe.c  json_split.c  ld_alternate.c  ld_cairo.c  ld_cairo.h  ld_cluster_curv.c  ld_correct.c  ld_exp_tro1.c  ld_fisher.c  ld_linearize.c  ld_noise.c  ld_purify.c  ld_recover.c  ld_remove_doubles.c  ld_resample.c  ld_select.c  ld_slip.c  ld_smooth.c  ld_stats.c  log2pdf.c  sm0.c  sm1.c  sm2.c  sm3.c  sm_animate.c  test_json.c  test_json_ld.c  test_json_pipe.c
sm/apps/gtk_viewer/: goo_laser_data.h
sm/apps/map/: CMakeLists.txt  many_points.config  map1.cpp  pan.cpp  pan.h  test_01.sh
sm/apps/qtv/: CMakeLists.txt  design.txt  main.cpp  mouse.cpp  mouse.h  qfilereader.cpp  qfilereader.h  qlaserdata.cpp  qlaserdata.h  qmapview.cpp  qmapview.h  qparser.cpp  qparser.h  qscene.cpp  qscene.h  qtv.cpp  qtv.h
sm/apps/raytracer/: CMakeLists.txt  raytracer.cpp  raytracer.h  simplemap.cpp  simplemap.h  simplemap_obst.cpp  test01-map.json  test01-scans.json.expected  test01.sh
sm/apps/raytracer/tests/: example-map.json
sm/csm/: CMakeLists.txt  algos.h  clustering.c  csm.h  csm_all.h  journal.c  journal.h  json_journal.c  json_journal.h  laser_data.c  laser_data.h  laser_data_bbox.c  laser_data_cairo.c  laser_data_cairo.h  laser_data_carmen.c  laser_data_drawing.c  laser_data_drawing.h  laser_data_fisher.c  laser_data_inline.h  laser_data_json.c  laser_data_json.h  laser_data_load.c  logging.c  logging.h  math_utils.c  math_utils.h  math_utils_gsl.c  math_utils_gsl.h  math_utils_test.c  orientation.c  restrict.h  sm.h  sm_all.h  sm_options.c  test_math_utils_sanity.c  utils.c  utils.h
sm/csm/gpm/: gpc.txt  gpm.c  gpm.h
sm/csm/hsm/: CMakeLists.txt  hsm.c  hsm.h  hsm_interface.c  hsm_interface.h  hsm_test00.c
sm/csm/hsm/tests/: hsmtest.sh  hsmtest2.sh
sm/csm/icp/: fast_math.h  icp.c  icp.h  icp_corr_dumb.c  icp_corr_tricks.c  icp_covariance.c  icp_debug.c  icp_loop.c  icp_outliers.c
sm/csm/mbicp/: MbICP.h  MbICP2.h  TData.h  mbicp_interface.c
sm/csm/structprior/: CMakeLists.txt  Constraint.cpp  Constraint.h  ConstraintManager.cpp  ConstraintManager.h  MeasurementsLikelihood.cpp  MeasurementsLikelihood.h  Optimizer.cpp  Optimizer.h  structprior_test.cpp
sm/csmpp/: .gitignore  CMakeLists.txt  README.txt  csmpp.cpp  csmpp.h  csmpp.pc.in
sm/docs/: TODO.txt
sm/drivers/playerstage/mricp/: .directory  CMakeLists.txt  README  doxy.Doxyfile
sm/drivers/playerstage/mricp/include/: Timer.h  geometry2D.h  icp.h  lasermodel.h  nn.h
sm/drivers/playerstage/mricp/src/: Timer.cpp  geometry2D.cpp  icp.cpp  lasermodel.cpp  map.cpp  mricp_driver.cpp  nn.cpp
sm/drivers/playerstage/mricp/stage_test/: homer.inc  map.inc  rescue.world  stage_mricp.cfg  wheelchair.inc
sm/gtk_viewer/: Makefile  goo_laser_data.c  goo_laser_data.h  gtk_viewer-readme.txt  gtk_viewer.h  gtk_viewer1.c
sm/lib/JSON_checker/: JSON_checker.h
sm/lib/egsl/: CMakeLists.txt  egsl.c  egsl.h  egsl_conversions.c  egsl_macros.h  egsl_misc.c  egsl_ops.c  egsl_test.c  egsl_test_allocation.c
sm/lib/egsl/docs/: Makefile  README.txt  egsl.html  egsl.md  egsl.txt  header.html_frag  htmlsection  htmlsection.txt
sm/lib/gpc/: CMakeLists.txt  gpc.c  gpc.h  gpc_utils.c  gpc_utils.h
sm/lib/json-c/: CMakeLists.txt  JSON_checker.c  JSON_checker.h  Makefile  arraylist.c  aux_json.cpp  aux_json.h  bits.h  config.h  config.h.cmake  debug.h  json_more_utils.c  json_more_utils.h  json_object.c  json_object.h  json_object_private.h  json_tokener.c  json_tokener.h  linkhash.c  printbuf.c  test1.c  test2.c
sm/lib/json-c-0.7/: CMakeLists.txt  JSON_checker.c  JSON_checker.h  json.h  json_more_utils.c  json_more_utils.h  json_object.c  json_object.h  test1.c
sm/lib/options/: CMakeLists.txt  options.c  options.h  options_interface.c  test_options.c
sm/lib/options/ruby/: options.rb
sm/pkg-config/: CMakeLists.txt  csm.pc.in
sm/src/: clustering.c  journal.h  json_journal.c  json_journal.h  laser_data.c  laser_data.h  laser_data_carmen.c  laser_data_fisher.c  laser_data_json.c  laser_data_json.h  logging.c  logging.h  math_utils.c  math_utils.h  orientation.c  sm.h  sm_all.h  sm_options.c  utils.h
sm/src/gpm/: gpm.c
sm/src/icp/: icp.h  icp_corr_dumb.c  icp_corr_tricks.c  icp_covariance.c  icp_loop.c  icp_outliers.c
sm/test/test1/: go.sh  square.fig
src/: CMakeLists.txt
src/cmake/.svn/: all-wcprops  entries
src/csm/: csm_all.h  laser_data.cpp  logging.cpp  math_utils.cpp  math_utils_gsl.cpp  math_utils_gsl.h  orientation.cpp  sm_options.cpp  utils.cpp
src/egsl/: egsl.cpp  egsl_conversions.cpp  egsl_misc.cpp  egsl_ops.cpp
src/gpc/: gpc.cpp  gpc.h  gpc_utils.cpp  gpc_utils.h
src/icp/: icp.cpp  icp_corr_dumb.cpp  icp_corr_tricks.cpp  icp_covariance.cpp  icp_debug.cpp  icp_loop.cpp  icp_outliers.cpp
src/options/: options.cpp  options_interface.cpp
(+345 files in other folders)
